--- a/client/src/assets/styles/sustainability.css
+++ b/client/src/assets/styles/sustainability.css
@@ -325,10 +325,15 @@
   font-size: 40px;
 }
 .jEobIm p {
-  font-family: "Costa Text Regular", sans-serif;
   font-style: normal;
   margin: 18px 0px 32px;
   padding: 0px;
+  font-weight: normal !important;
+}
+.ldNozT > ul > li {
+  padding: 0px;
+  font-size: 16px;
+  font-style: normal;
   font-weight: normal !important;
 }
 .egFTCM {
@@ -360,6 +365,7 @@
   margin: 80px auto;
   padding: 0px;
   display: flex;
+  justify-content: center;
   flex-wrap: nowrap;
   flex-direction: initial;
 }
@@ -452,8 +458,29 @@
   background-image: url(../coffee_cups_n_packages.jpg);
   background-size: cover;
   background-position: center center;
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  margin: 0;
+  max-width: none;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
   width: 100%;
-  height: 220px;
+  object-fit: cover;
+  margin-bottom: 0px;
+}
+.cup_n_package--recycling_image {
+  background-image: url(../recycling.jpg);
+  background-size: cover;
+  background-position: center center;
+  height: 250px;
+}
+.climate_image {
+  background-image: url(../climate_image--factories.jpg);
+  background-size: cover;
+  background-position: center center;
   bottom: 0;
   height: 100%;
   left: 0;
