--- a/client/src/assets/styles/sustainability.css
+++ b/client/src/assets/styles/sustainability.css
@@ -494,3 +494,20 @@
   object-fit: cover;
   margin-bottom: 0px;
 }
+.communities_image {
+  background-image: url(../community_main_image.jpg);
+  background-size: cover;
+  background-position: center center;
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  margin: 0;
+  max-width: none;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  object-fit: cover;
+  margin-bottom: 0px;
+}
