few html adjustments

--- a/client/src/assets/styles/menu.css
+++ b/client/src/assets/styles/menu.css
@@ -37,7 +37,7 @@
   font-size: 16px;
   display: inline-block;
   margin: 0px 30px 8px 0px;
-  color: rgb(109, 31, 55);
+  color: #b55928;
   width: 100px;
   font-weight: normal !important;
 }
@@ -71,7 +71,7 @@
   display: inline-block;
   margin: 0px;
   font-size: 16px;
-  color: rgb(109, 31, 55);
+  color: #b55928;
   font-weight: normal !important;
 }
 .dcXACD .filterGroup {
@@ -121,7 +121,7 @@
   margin-bottom: 16px;
 }
 .jMHQDw {
-  color: rgb(109, 31, 55);
+  color: #b55928;
   line-height: 24px;
   font-size: 16px;
   position: relative;
@@ -157,7 +157,7 @@
 }
 .caKoHX .calorieMessageWrapper h5 {
   font-size: 16px;
-  color: rgb(109, 31, 55);
+  color: #b55928;
   font-weight: normal !important;
 }
 .caKoHX .calorieMessageWrapper p {
@@ -174,7 +174,7 @@
 .jhTJPl .categoryHeader {
   font-size: 36px;
   line-height: 1.1;
-  color: rgb(109, 31, 55);
+  color: #b55928;
   margin: 48px 0px 32px;
   font-weight: normal !important;
 }
@@ -206,7 +206,7 @@
 }
 .jxXUwO .header {
   font-size: 16px;
-  color: rgb(109, 31, 55);
+  color: #b55928;
   margin-bottom: 9px;
   padding: 0px 10px;
   text-align: center;
